...
        if let path = ProcessInfo.processInfo.environment["TWINE_DATA_DIRECTORY"] {
            return URL(filePath: path, directoryHint: .isDirectory)
        }
        #if DEBUG
            return developmentDirectory
        #else
            return .applicationSupportDirectory.appending(path: "Twine", directoryHint: .isDirectory)
        #endif
    }

    static var previewDirectory: URL {
        developmentDirectory.appending(path: "previews", directoryHint: .isDirectory)
    }
...
